[gd_scene load_steps=30 format=3 uid="uid://btcwjruvsyi8v"]

[ext_resource type="Script" uid="uid://dklyrybej5unf" path="res://21_scenes/main/main.gd" id="1_fafct"]
[ext_resource type="PackedScene" uid="uid://7vpbb7j0wes1" path="res://31_entities/world/environment/custom_world_environment.tscn" id="1_jbpyi"]
[ext_resource type="PackedScene" uid="uid://mm4fib8gds8v" path="res://31_entities/terrain/rocks/rocks.tscn" id="1_jrx1x"]
[ext_resource type="PackedScene" uid="uid://7ecyw24x8ek3" path="res://31_entities/objects/chest/chest.tscn" id="1_s6nbt"]
[ext_resource type="PackedScene" uid="uid://m34ge5n2y6kq" path="res://31_entities/characters/stone_buddy/stone_buddy.tscn" id="2_8xbvx"]
[ext_resource type="PackedScene" uid="uid://bfc6muihiuy8u" path="res://31_entities/items/shell/shell.tscn" id="3_0bgje"]
[ext_resource type="PackedScene" uid="uid://r2og1xnaw5if" path="res://31_entities/world/grid_maps/stairs/stairs_grid_map.tscn" id="4_txufx"]
[ext_resource type="PackedScene" uid="uid://bxptxteivbgjd" path="res://11_utilities/game/manager/item_spawn/item_spawn_manager.tscn" id="5_cbge5"]
[ext_resource type="PackedScene" uid="uid://uqfry7sfeu2n" path="res://31_entities/items/grass/grass_normal.tscn" id="6_kcmh8"]
[ext_resource type="PackedScene" uid="uid://pj8xpe8jmipf" path="res://31_entities/world/grid_maps/ground/sand_block_grid_map.tscn" id="7_38bgp"]
[ext_resource type="PackedScene" uid="uid://qrv36u87xk77" path="res://31_entities/items/grass/model/grass_short.glb" id="7_lh7vv"]
[ext_resource type="PackedScene" uid="uid://cr0nhrtt6cc2v" path="res://31_entities/world/grid_maps/ground/grass_block_grid_map.tscn" id="8_7jppm"]
[ext_resource type="PackedScene" uid="uid://wjlxyxv8tbej" path="res://31_entities/world/water/Water.tscn" id="8_08icv"]
[ext_resource type="PackedScene" uid="uid://0rd3dtxpev4o" path="res://31_entities/world/grid_maps/placeable_objects/placeable_object_grid_map.tscn" id="8_38bgp"]
[ext_resource type="PackedScene" uid="uid://tk2eflh7qtvg" path="res://31_entities/items/grass/grass_short_plane.tscn" id="8_lqtem"]
[ext_resource type="PackedScene" uid="uid://dh5aln7gpogpm" path="res://31_entities/world/fog/fog.tscn" id="8_v34c6"]
[ext_resource type="PackedScene" uid="uid://b0r5vk50kpx5o" path="res://31_entities/items/wood_stick/wood_stick.tscn" id="9_0vct4"]
[ext_resource type="PackedScene" uid="uid://dv3h2niliheuc" path="res://31_entities/items/grass/grass_collectable.tscn" id="9_5tdkx"]
[ext_resource type="PackedScene" uid="uid://cdjeixcaqy0gf" path="res://11_utilities/game/manager/object_placement/object_placement_manager.tscn" id="11_p0lnu"]
[ext_resource type="PackedScene" uid="uid://b7vf6qkul3k7h" path="res://41_ui/inventory/inventory.tscn" id="15_2wl7j"]
[ext_resource type="Resource" uid="uid://dpv42mt3mtcg3" path="res://12_common/inventory/inventory_data_templates/player_inventory_data.tres" id="15_a6wpl"]
[ext_resource type="Script" uid="uid://b82uj67ni3rxo" path="res://12_common/inventory/inventory_interface.gd" id="17_a264a"]
[ext_resource type="PackedScene" uid="uid://dvrbdkn1plvwu" path="res://41_ui/inventory/inventory_slot.tscn" id="19_m4ofp"]
[ext_resource type="PackedScene" uid="uid://c06wj0486ahfs" path="res://31_entities/objects/banish_stone/banish_stone_area.tscn" id="19_xnwlh"]
[ext_resource type="PackedScene" uid="uid://d4m5olm4gyd37" path="res://41_ui/inventory/banish_stone/banish_stone_inventory.tscn" id="24_pusqf"]
[ext_resource type="PackedScene" uid="uid://dhnl3ilmkwb5a" path="res://41_ui/inventory/chest/chest_inventory.tscn" id="26_38bgp"]
[ext_resource type="Script" uid="uid://cyhov42hcc45t" path="res://12_common/build_mode/build_mode_interface.gd" id="27_38bgp"]
[ext_resource type="PackedScene" uid="uid://4cev0mk1cl2f" path="res://41_ui/build_mode/build_mode.tscn" id="28_08icv"]
[ext_resource type="Resource" uid="uid://b7fv2ek4v0hpv" path="res://12_common/build_mode/build_mode_data_templates/general_build_mode_data.tres" id="28_71wyj"]

[node name="Main" type="Node3D" groups=["main"]]
script = ExtResource("1_fafct")

[node name="Manager" type="Node3D" parent="."]

[node name="WoodStickSpawnManager" parent="Manager" instance=ExtResource("5_cbge5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.4409, 0.888896, -4.07642)
item_scene = ExtResource("9_0vct4")
max_items = 15

[node name="ShellSpawnManager" parent="Manager" instance=ExtResource("5_cbge5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.66942, 0, 9.25105)
item_scene = ExtResource("3_0bgje")

[node name="ObjectPlacementManager" parent="Manager" node_paths=PackedStringArray("grid_map") instance=ExtResource("11_p0lnu")]
grid_map = NodePath("../../Entities/World/GridMaps/PlaceableObject")

[node name="Entities" type="Node3D" parent="." groups=["entities_layer"]]

[node name="Characters" type="Node3D" parent="Entities"]

[node name="StoneBuddy" parent="Entities/Characters" instance=ExtResource("2_8xbvx")]
inventory_data = ExtResource("15_a6wpl")

[node name="Items" type="Node3D" parent="Entities"]

[node name="GrassNormal" parent="Entities/Items" instance=ExtResource("6_kcmh8")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -3.31159, 0, 4)

[node name="GrassShort" parent="Entities/Items" instance=ExtResource("7_lh7vv")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -2.85791, 0, 4.42808)

[node name="GrassShortPlane" parent="Entities/Items" instance=ExtResource("8_lqtem")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -2.13643, 0, 3.43925)

[node name="GrassCollectable" parent="Entities/Items" instance=ExtResource("9_5tdkx")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -1.51341, 0, 4.04199)

[node name="GrassCollectable2" parent="Entities/Items" instance=ExtResource("9_5tdkx")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -2.81351, 0, 3.64591)

[node name="Objects" type="Node3D" parent="Entities"]

[node name="BanishStoneArea" parent="Entities/Objects" instance=ExtResource("19_xnwlh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.0397, 0, -5.96383)
isActivated = true

[node name="Chest" parent="Entities/Objects" instance=ExtResource("1_s6nbt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.9763)

[node name="Terrain" type="Node3D" parent="Entities"]

[node name="Rocks" parent="Entities/Terrain" instance=ExtResource("1_jrx1x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11.5697)

[node name="World" type="Node3D" parent="Entities"]

[node name="CustomWorldEnvironment" parent="Entities/World" instance=ExtResource("1_jbpyi")]

[node name="Lights" type="Node3D" parent="Entities/World"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Entities/World/Lights"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 5.74541, 0)
shadow_enabled = true

[node name="OmniLight3D" type="OmniLight3D" parent="Entities/World/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.75449, 3.2077, -2.70588)
visible = false
light_color = Color(0.545098, 0.32549, 0.631373, 1)
light_energy = 5.0
shadow_enabled = true
shadow_opacity = 0.5
shadow_blur = 5.0
omni_range = 10.0

[node name="OmniLight3D2" type="OmniLight3D" parent="Entities/World/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.75996, 3.25648, -7.86405)
visible = false
light_color = Color(0.588235, 0.741176, 0.792157, 1)
light_energy = 3.0
shadow_enabled = true
shadow_opacity = 0.5
shadow_blur = 5.0
omni_range = 10.0

[node name="OmniLight3D3" type="OmniLight3D" parent="Entities/World/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.72733, 3.13286, 4.81682)
visible = false
light_color = Color(0.588235, 0.741176, 0.792157, 1)
light_energy = 3.0
shadow_enabled = true
shadow_opacity = 0.5
shadow_blur = 5.0
omni_range = 10.0

[node name="OmniLight3D4" type="OmniLight3D" parent="Entities/World/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4568, 5.54554, -16.4015)
visible = false
light_color = Color(0.588235, 0.741176, 0.792157, 1)
light_energy = 3.0
shadow_enabled = true
shadow_opacity = 0.5
shadow_blur = 5.0
omni_range = 10.0

[node name="Fogs" type="Node3D" parent="Entities/World"]
visible = false

[node name="Fog" parent="Entities/World/Fogs" instance=ExtResource("8_v34c6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.1368, 0, -8.77835)

[node name="Fog2" parent="Entities/World/Fogs" instance=ExtResource("8_v34c6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8224, 0, -11.7492)

[node name="Fog3" parent="Entities/World/Fogs" instance=ExtResource("8_v34c6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.7756, 2, -25.5453)

[node name="Fog4" parent="Entities/World/Fogs" instance=ExtResource("8_v34c6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.61681, 2, -19.3516)

[node name="Fog5" parent="Entities/World/Fogs" instance=ExtResource("8_v34c6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32.726, 2, -23.5016)

[node name="Fog6" parent="Entities/World/Fogs" instance=ExtResource("8_v34c6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35.8001, 2.00854, -16.7869)

[node name="GridMaps" type="Node3D" parent="Entities/World"]

[node name="Stairs" parent="Entities/World/GridMaps" instance=ExtResource("4_txufx")]
data = {
"cells": PackedInt32Array(3, 4, 1441792, 6, 65531, 1441792)
}

[node name="StairsStones" parent="Entities/World/GridMaps" instance=ExtResource("4_txufx")]
data = {
"cells": PackedInt32Array(3, 4, 1441793, 6, 65531, 1441793)
}

[node name="GrassBlock" parent="Entities/World/GridMaps" instance=ExtResource("8_7jppm")]
data = {
"cells": PackedInt32Array(2, 3, 0, 3, 3, 0, 3, 2, 0, 4, 3, 0, 4, 2, 0, 5, 3, 0, 5, 2, 0, 65538, 3, 0, 65539, 3, 0, 65539, 2, 0, 5, 4, 0, 65535, 65530, 0, 0, 65530, 0, 1, 65530, 0, 2, 65530, 0, 3, 65530, 0, 4, 65530, 0, 5, 65530, 0, 6, 65530, 0, 7, 65530, 0, 8, 65530, 0, 9, 65530, 0, 10, 65530, 0, 11, 65530, 0, 8, 65531, 0, 9, 65531, 0, 10, 65531, 0, 11, 65531, 0, 12, 65530, 0, 12, 65531, 0, 65535, 65529, 0, 0, 65529, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 0, 6, 65529, 0, 5, 65528, 0, 4, 65528, 0, 3, 65528, 0, 2, 65528, 0, 1, 65528, 0, 0, 65528, 0, 65535, 65528, 0, 65534, 65528, 0, 65533, 65528, 0, 65532, 65528, 0, 65531, 65528, 0, 65530, 65528, 0, 65531, 65529, 0, 65530, 65529, 0, 65529, 65529, 0, 65528, 65529, 0, 65527, 65529, 0, 65527, 65528, 0, 65528, 65528, 0, 65529, 65528, 0, 3, 65527, 0, 2, 65527, 0, 1, 65527, 0, 0, 65527, 0, 65535, 65527, 0, 65534, 65527, 0, 65534, 65526, 0, 65533, 65526, 0, 65532, 65526, 0, 65531, 65526, 0, 65530, 65526, 0, 65529, 65526, 0, 65529, 65527, 0, 65530, 65527, 0, 65531, 65527, 0, 65532, 65527, 0, 65533, 65527, 0, 7, 65529, 0, 8, 65529, 0, 9, 65529, 0, 10, 65529, 0, 10, 65528, 0, 11, 65528, 0, 11, 65529, 0, 12, 65528, 0, 12, 65529, 0, 13, 65529, 0, 13, 65528, 0, 13, 65527, 0, 13, 65526, 0, 13, 65525, 0, 13, 65524, 0, 12, 65524, 0, 11, 65525, 0, 10, 65525, 0, 10, 65524, 0, 10, 65523, 0, 11, 65523, 0, 11, 65524, 0, 11, 65526, 0, 10, 65526, 0, 10, 65527, 0, 11, 65527, 0, 12, 65526, 0, 12, 65527, 0, 12, 65525, 0, 9, 65528, 0, 9, 65527, 0, 65547, 65528, 0, 65547, 65527, 0, 65547, 65526, 0, 65548, 65526, 0, 65548, 65527, 0, 65548, 65528, 0, 65547, 65529, 0, 131084, 65527, 0, 65539, 65527, 1441793, 65538, 65527, 1441793, 65537, 65527, 1441793, 65536, 65527, 1441793, 65539, 65528, 1441793, 65540, 65528, 1441793, 65541, 65528, 1441793, 6, 2, 0)
}

[node name="SandBlock" parent="Entities/World/GridMaps" instance=ExtResource("7_38bgp")]
data = {
"cells": PackedInt32Array(-65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65522, 4, 0, -65523, 4, 0, -65524, 4, 0, -65524, 3, 0, -65525, 3, 0, -65525, 2, 0, -65526, 2, 0, -65526, 1, 0, -65527, 1, 0, -65527, 0, 0, -65528, 0, 0, -65521, 4, 0, -65522, 3, 0, -65523, 3, 0, -65523, 2, 0, -65524, 2, 0, -65520, 4, 0, -65521, 3, 0, -65522, 2, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65520, 2, 0, -65520, 3, 0, -65521, 2, 0, -1, 4, 0, -2, 4, 0, -3, 4, 0, -3, 3, 0, -4, 3, 0, -4, 2, 0, -5, 3, 0, -5, 4, 0, -6, 4, 0, -6, 3, 0, -2, 2, 0, -3, 2, 0, -4, 4, 0, -1, 3, 0, -65534, 3, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65528, 3, 0, -65529, 3, 0, -65530, 3, 0, -65531, 3, 0, -65532, 3, 0, -65533, 3, 0, -65535, 3, 0, -65536, 3, 0, -2, 3, 0, -65533, 2, 0, -65526, 3, 0, -65527, 3, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65523, 0, 0, -65524, 0, 0, -65525, 0, 0, -65525, 1, 0, -65524, 1, 0, -65520, 0, 0, -65520, 65535, 0, -65520, 65534, 0, -65520, 65533, 0, -65520, 65532, 0, -65520, 65531, 0, -65520, 65530, 0, -65520, 65529, 0, -65520, 65528, 0, -65520, 65527, 0, -65520, 65526, 0, -65520, 65525, 0, -65520, 65524, 0, -65520, 65523, 0, -65520, 65522, 0, -65521, 65522, 0, -65523, 65522, 0, -65524, 65522, 0, -65525, 65522, 0, -65528, 65522, 0, -65530, 65522, 0, -65529, 65522, 0, -65526, 65522, 0, -65522, 65522, 0, -65527, 65522, 0, -65531, 65522, 0, -65532, 65522, 0, -65533, 65522, 0, -65535, 65522, 0, -1, 65522, 0, -2, 65522, 0, -4, 65522, 0, -5, 65522, 0, -6, 65522, 0, -7, 65522, 0, -8, 65522, 0, -9, 65522, 0, -10, 65522, 0, -11, 65522, 0, -12, 65522, 0, -13, 65522, 0, -14, 65523, 0, -14, 65522, 0, -14, 65524, 0, -14, 65525, 0, -14, 65526, 0, -14, 65527, 0, -14, 65528, 0, -14, 65529, 0, -14, 65530, 0, -14, 65532, 0, -14, 65533, 0, -15, 65533, 0, -15, 65535, 0, -14, 65535, 0, -14, 65534, 0, -14, 65531, 0, -15, 65534, 0, -15, 0, 0, -15, 1, 0, -15, 2, 0, -15, 3, 0, -15, 4, 0, -15, 5, 0, -15, 6, 0, -15, 7, 0, -15, 8, 0, -14, 8, 0, -13, 8, 0, -11, 7, 0, -8, 7, 0, -6, 7, 0, -7, 7, 0, -10, 7, 0, -11, 8, 0, -12, 8, 0, -12, 7, 0, -9, 7, 0, -6, 6, 0, -4, 6, 0, -2, 6, 0, -3, 6, 0, -5, 7, 0, -5, 6, 0, -1, 6, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, -65536, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 5, 0, -65528, 5, 0, -65529, 5, 0, -65530, 6, 0, -65527, 5, 0, -65526, 5, 0, -65525, 5, 0, -65523, 5, 0, -65522, 5, 0, -65524, 5, 0, -11, 65535, 0, -11, 65534, 0, -11, 65533, 0, -11, 65532, 0, -11, 65531, 0, -11, 65530, 0, -11, 65529, 0, -11, 65528, 0, -11, 65527, 0, -11, 65526, 0, -11, 65525, 0, -11, 65524, 0, -11, 65523, 0, -12, 65523, 0, -13, 65523, 0, -13, 65524, 0, -13, 65525, 0, -13, 65526, 0, -13, 65527, 0, -13, 65528, 0, -13, 65529, 0, -13, 65531, 0, -13, 65532, 0, -13, 65533, 0, -13, 65534, 0, -13, 65535, 0, -13, 65530, 0, -12, 65524, 0, -12, 65526, 0, -12, 65527, 0, -12, 65525, 0, -12, 65528, 0, -12, 65529, 0, -12, 65530, 0, -12, 65531, 0, -12, 65532, 0, -12, 65533, 0, -12, 65534, 0, -12, 65535, 0, -14, 0, 0, -13, 0, 0, -13, 1, 0, -13, 2, 0, -14, 2, 0, -14, 1, 0, -14, 4, 0, -13, 3, 0, -14, 3, 0, -13, 4, 0, -13, 5, 0, -14, 5, 0, -14, 6, 0, -13, 6, 0, -13, 7, 0, -14, 7, 0, -12, 6, 0, -11, 6, 0, -9, 6, 0, -7, 6, 0, -8, 6, 0, -10, 6, 0, -12, 5, 0, -10, 5, 0, -9, 5, 0, -8, 5, 0, -7, 5, 0, -6, 5, 0, -5, 5, 0, -4, 5, 0, -2, 5, 0, -1, 5, 0, -65536, 5, 0, -65534, 5, 0, -65532, 5, 0, -65531, 5, 0, -65533, 5, 0, -65535, 5, 0, -3, 5, 0, -11, 5, 0, -12, 3, 0, -11, 3, 0, -10, 3, 0, -12, 4, 0, -11, 4, 0, -10, 4, 0, -12, 2, 0, -11, 2, 0, -10, 2, 0, -12, 1, 0, -12, 0, 0, -11, 0, 0, -11, 1, 0, -3, 65522, 0, -65536, 65522, 0, -65534, 65522, 0, -8, 0, 0, -10, 65523, 0, -10, 65524, 0, -10, 65525, 0, -10, 65526, 0, -10, 65527, 0, -10, 65528, 0, -10, 65529, 0, -10, 65530, 0, -10, 65531, 0, -10, 65532, 0, -10, 65533, 0, -10, 65534, 0, -10, 65535, 0, -10, 0, 0, -10, 1, 0, -9, 65523, 0, -9, 65524, 0, -9, 65525, 0, -9, 65526, 0, -9, 65527, 0, -9, 65528, 0, -9, 65529, 0, -9, 65530, 0, -9, 65531, 0, -9, 65532, 0, -9, 65533, 0, -9, 65534, 0, -9, 65535, 0, -9, 0, 0, -9, 1, 0, -9, 2, 0, -9, 3, 0, -9, 4, 0, -8, 65523, 0, -8, 65524, 0, -8, 65525, 0, -8, 65526, 0, -8, 65527, 0, -8, 65528, 0, -8, 65529, 0, -8, 65530, 0, -8, 65531, 0, -8, 65532, 0, -8, 65533, 0, -8, 65534, 0, -8, 65535, 0, -8, 1, 0, -8, 2, 0, -8, 3, 0, -8, 4, 0, -7, 65523, 0, -7, 65524, 0, -7, 65525, 0, -7, 65526, 0, -7, 65527, 0, -7, 65528, 0, -7, 65529, 0, -7, 65530, 0, -7, 65531, 0, -7, 65532, 0, -7, 65533, 0, -7, 65534, 0, -7, 1, 0, -7, 2, 0, -7, 3, 0, -7, 4, 0, -6, 65523, 0, -6, 65524, 0, -6, 65525, 0, -6, 65526, 0, -6, 65527, 0, -6, 65528, 0, -6, 65529, 0, -6, 65530, 0, -6, 65531, 0, -6, 65532, 0, -6, 65533, 0, -6, 65534, 0, -5, 65523, 0, -5, 65524, 0, -5, 65525, 0, -5, 65526, 0, -5, 65527, 0, -5, 65528, 0, -5, 65529, 0, -5, 65530, 0, -5, 65531, 0, -5, 65532, 0, -5, 65533, 0, -5, 65534, 0, -4, 65523, 0, -4, 65524, 0, -4, 65525, 0, -4, 65526, 0, -4, 65527, 0, -4, 65528, 0, -4, 65529, 0, -4, 65530, 0, -4, 65531, 0, -4, 65532, 0, -4, 65533, 0, -4, 65534, 0, -4, 65535, 0, -3, 65523, 0, -3, 65524, 0, -3, 65525, 0, -3, 65526, 0, -3, 65527, 0, -3, 65528, 0, -3, 65529, 0, -3, 65530, 0, -3, 65531, 0, -3, 65532, 0, -3, 65533, 0, -3, 65534, 0, -3, 65535, 0, -3, 0, 0, -3, 1, 0, -2, 65523, 0, -2, 65524, 0, -2, 65525, 0, -2, 65526, 0, -2, 65527, 0, -2, 65528, 0, -2, 65529, 0, -2, 65530, 0, -2, 65531, 0, -2, 65532, 0, -2, 65533, 0, -2, 65534, 0, -2, 65535, 0, -2, 0, 0, -2, 1, 0, -1, 65523, 0, -1, 65524, 0, -1, 65525, 0, -1, 65526, 0, -1, 65527, 0, -1, 65528, 0, -1, 65529, 0, -1, 65530, 0, -1, 65531, 0, -1, 65532, 0, -1, 65533, 0, -1, 65534, 0, -1, 65535, 0, -1, 0, 0, -1, 1, 0, -1, 2, 0, -65536, 65523, 0, -65536, 65524, 0, -65536, 65525, 0, -65536, 65526, 0, -65536, 65527, 0, -65536, 65528, 0, -65536, 65529, 0, -65536, 65530, 0, -65536, 65531, 0, -65536, 65532, 0, -65536, 65533, 0, -65536, 65534, 0, -65536, 65535, 0, -65536, 0, 0, -65536, 1, 0, -65536, 2, 0, -65535, 65523, 0, -65535, 65524, 0, -65535, 65525, 0, -65535, 65526, 0, -65535, 65527, 0, -65535, 65528, 0, -65535, 65529, 0, -65535, 65530, 0, -65535, 65531, 0, -65535, 65532, 0, -65535, 65533, 0, -65535, 65534, 0, -65535, 65535, 0, -65535, 0, 0, -65535, 1, 0, -65535, 2, 0, -65534, 65523, 0, -65534, 65524, 0, -65534, 65525, 0, -65534, 65526, 0, -65534, 65527, 0, -65534, 65528, 0, -65534, 65529, 0, -65534, 65530, 0, -65534, 65531, 0, -65534, 65532, 0, -65534, 65533, 0, -65534, 65534, 0, -65534, 65535, 0, -65534, 0, 0, -65534, 1, 0, -65534, 2, 0, -65533, 65523, 0, -65533, 65524, 0, -65533, 65525, 0, -65533, 65526, 0, -65533, 65527, 0, -65533, 65528, 0, -65533, 65529, 0, -65533, 65530, 0, -65533, 65531, 0, -65533, 65532, 0, -65533, 65533, 0, -65533, 65534, 0, -65533, 65535, 0, -65533, 0, 0, -65533, 1, 0, -65532, 65523, 0, -65532, 65524, 0, -65532, 65525, 0, -65532, 65526, 0, -65532, 65527, 0, -65532, 65528, 0, -65532, 65529, 0, -65532, 65530, 0, -65532, 65531, 0, -65532, 65532, 0, -65532, 65533, 0, -65532, 65534, 0, -65532, 65535, 0, -65532, 0, 0, -65532, 1, 0, -65531, 65523, 0, -65531, 65524, 0, -65531, 65525, 0, -65531, 65526, 0, -65531, 65527, 0, -65531, 65528, 0, -65531, 65529, 0, -65531, 65530, 0, -65531, 65531, 0, -65531, 65532, 0, -65531, 65533, 0, -65531, 65534, 0, -65531, 65535, 0, -65531, 0, 0, -65531, 1, 0, -65530, 65523, 0, -65530, 65524, 0, -65530, 65525, 0, -65530, 65526, 0, -65530, 65527, 0, -65530, 65528, 0, -65530, 65529, 0, -65530, 65530, 0, -65530, 65531, 0, -65530, 65532, 0, -65530, 65533, 0, -65530, 65534, 0, -65530, 65535, 0, -65530, 0, 0, -65530, 1, 0, -65529, 65523, 0, -65529, 65524, 0, -65529, 65525, 0, -65529, 65526, 0, -65529, 65527, 0, -65529, 65528, 0, -65529, 65529, 0, -65529, 65530, 0, -65529, 65531, 0, -65529, 65532, 0, -65529, 65533, 0, -65529, 65534, 0, -65529, 65535, 0, -65529, 0, 0, -65529, 1, 0, -65528, 65523, 0, -65528, 65524, 0, -65528, 65525, 0, -65528, 65526, 0, -65528, 65527, 0, -65528, 65528, 0, -65528, 65529, 0, -65528, 65530, 0, -65528, 65531, 0, -65528, 65532, 0, -65528, 65533, 0, -65528, 65534, 0, -65528, 65535, 0, -65528, 1, 0, -65527, 65523, 0, -65527, 65524, 0, -65527, 65525, 0, -65527, 65526, 0, -65527, 65527, 0, -65527, 65528, 0, -65527, 65529, 0, -65527, 65530, 0, -65527, 65531, 0, -65527, 65532, 0, -65527, 65533, 0, -65527, 65534, 0, -65527, 65535, 0, -65526, 65523, 0, -65526, 65524, 0, -65526, 65525, 0, -65526, 65526, 0, -65526, 65527, 0, -65526, 65528, 0, -65526, 65529, 0, -65526, 65530, 0, -65526, 65531, 0, -65526, 65532, 0, -65526, 65533, 0, -65526, 65534, 0, -65526, 65535, 0, -65526, 0, 0, -65525, 65523, 0, -65525, 65524, 0, -65525, 65525, 0, -65525, 65526, 0, -65525, 65527, 0, -65525, 65528, 0, -65525, 65529, 0, -65525, 65530, 0, -65525, 65531, 0, -65525, 65532, 0, -65525, 65533, 0, -65525, 65534, 0, -65525, 65535, 0, -65524, 65523, 0, -65524, 65524, 0, -65524, 65525, 0, -65524, 65526, 0, -65524, 65527, 0, -65524, 65528, 0, -65524, 65529, 0, -65524, 65530, 0, -65524, 65531, 0, -65524, 65532, 0, -65524, 65533, 0, -65524, 65534, 0, -65524, 65535, 0, -65523, 65523, 0, -65523, 65524, 0, -65523, 65525, 0, -65523, 65526, 0, -65523, 65527, 0, -65523, 65528, 0, -65523, 65529, 0, -65523, 65530, 0, -65523, 65531, 0, -65523, 65532, 0, -65523, 65533, 0, -65523, 65534, 0, -65523, 65535, 0, -65522, 65523, 0, -65522, 65524, 0, -65522, 65525, 0, -65522, 65526, 0, -65522, 65527, 0, -65522, 65528, 0, -65522, 65529, 0, -65522, 65530, 0, -65522, 65531, 0, -65522, 65532, 0, -65522, 65533, 0, -65522, 65534, 0, -65522, 65535, 0, -65522, 0, 0, -65521, 65523, 0, -65521, 65524, 0, -65521, 65525, 0, -65521, 65526, 0, -65521, 65527, 0, -65521, 65528, 0, -65521, 65529, 0, -65521, 65530, 0, -65521, 65531, 0, -65521, 65532, 0, -65521, 65533, 0, -65521, 65534, 0, -65521, 65535, 0, -65521, 0, 0, -65519, 65534, 0, -65519, 65533, 0, -65519, 65531, 0, -65519, 65530, 0, -65519, 65529, 0, -65519, 65528, 0, -65519, 65527, 0, -65519, 65532, 0, -15, 65522, 0, -15, 65523, 0, -15, 65524, 0, -15, 65521, 0, -14, 65521, 0, -13, 65521, 0, -12, 65521, 0, -11, 65521, 0, -10, 65521, 0, -9, 65521, 0, -65533, 65521, 0, -65532, 65521, 0, -65531, 65521, 0, -65530, 65521, 0)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="PlaceableObject" parent="Entities/World/GridMaps" instance=ExtResource("8_38bgp")]

[node name="Water" type="Node3D" parent="Entities/World"]

[node name="Water1" parent="Entities/World/Water" instance=ExtResource("8_08icv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50, -2.33707, 50)

[node name="Water2" parent="Entities/World/Water" instance=ExtResource("8_08icv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, -2.33707, 50)

[node name="Water3" parent="Entities/World/Water" instance=ExtResource("8_08icv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50, -2.33707, -50)

[node name="Water4" parent="Entities/World/Water" instance=ExtResource("8_08icv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, -2.33707, -50)

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("17_a264a")
metadata/_edit_use_anchors_ = true

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("15_2wl7j")]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 70.0

[node name="ChestInventory" parent="UI/InventoryInterface" instance=ExtResource("26_38bgp")]
visible = false
layout_mode = 0
offset_left = 1000.0
offset_top = 30.0
offset_right = 1040.0
offset_bottom = 70.0

[node name="BanishStoneInventory" parent="UI/InventoryInterface" instance=ExtResource("24_pusqf")]
visible = false
layout_mode = 0
offset_left = 1000.0
offset_top = 30.0
offset_right = 1133.0
offset_bottom = 92.0

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("19_m4ofp")]
visible = false
modulate = Color(1, 1, 1, 0.54902)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0

[node name="BuildModeInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("27_38bgp")
general_build_mode_data = ExtResource("28_71wyj")

[node name="BuildMode" parent="UI/BuildModeInterface" instance=ExtResource("28_08icv")]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 530.0
offset_bottom = 435.0

[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
